# Assignment-part3

./: LASTNAME_FIRSTNAME_part3.py  dji.pickle  part3.py  pyproject.toml  rate.pickle  unemployment.pickle
