[tool.poetry]
name = "project3"
version = "0.1.0"
description = ""
authors = ["imhwnag <imhwang@126.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.1"
yfinance = "^0.2.37"
pandas-datareader = "^0.10.0"
selenium = "^4.19.0"
streamlit = "^1.33.0"
lazypredict = "^0.2.12"
watchdog = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
